made corrections to style

--- a/201/Class1Lab/index.html
+++ b/201/Class1Lab/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <style>
@@ -12,24 +12,16 @@
     <script> src = "Class1Lab.js"</script>
 </head>
 
-
 <body>
     <header></header>
     <main>
         <h1>Class 1 Lab</h1>
-        <p style="color:red" ; style="background-color:aqua">Question 1</p>
-        <p style="color:green" ; style="background-color:gray">Question 2</p>
-        <p style="color:yellow" ; style="background-color:magenta">Question 3</p>
-        <p style="color:purple" ; style="background-color: brown;">Question 4</p>
+        <p style="color:red; background-color:aqua">Question 1</p>
+        <p style="color:green; background-color:gray">Question 2</p>
+        <p style="color:yellow; background-color:magenta">Question 3</p>
+        <p style="color:purple; background-color: brown;">Question 4</p>
     </main>
 
     <footer></footer>
 </body>
-
-
-
-
-
-
-
 </html>
