corrected link to js maybe

--- a/201/Class1Lab/index.html
+++ b/201/Class1Lab/index.html
@@ -9,7 +9,7 @@
             background-color: darkblue;
         }
     </style>
-    <script> src = "Class1Lab.js"</script>
+    <script>src="class1lab.js"</script>
 </head>
 
 <body>
