corrected link to js maybe

--- a/201/Class1Lab/index.html
+++ b/201/Class1Lab/index.html
@@ -9,17 +9,17 @@
             background-color: darkblue;
         }
     </style>
-    <script>src="class1lab.js"</script>
+    <script> src="class1lab.js"</script>
 </head>
 
 <body>
     <header></header>
     <main>
         <h1>Class 1 Lab</h1>
-        <p style="color:red; background-color:aqua">Question 1</p>
-        <p style="color:green; background-color:gray">Question 2</p>
-        <p style="color:yellow; background-color:magenta">Question 3</p>
-        <p style="color:purple; background-color: brown;">Question 4</p>
+        <p style="color:darkblue; background-color:aqua">Question 1</p>
+        <p style="color:darkslategrey; background-color:gray">Question 2</p>
+        <p style="color:darkolivegreen; background-color:yellow">Question 3</p>
+        <p style="color:purple; background-color:pink;">Question 4</p>
     </main>
 
     <footer></footer>
