changed colors to fix contrast, added title

--- a/201/Class1Lab/index.html
+++ b/201/Class1Lab/index.html
@@ -6,20 +6,21 @@
     <style>
         h1 {
             color: aliceblue;
-            background-color: darkblue;
+            background-color: rgb(14, 14, 50);
         }
     </style>
     <script src = "class1lab.js"></script>
+    <title>Monty Python Q's</title>
 </head>
 
 <body>
     <header></header>
     <main>
         <h1>Class 1 Lab</h1>
-        <p style="color:darkblue; background-color:aqua">Question 1</p>
-        <p style="color:darkslategrey; background-color:gray">Question 2</p>
-        <p style="color:darkolivegreen; background-color:yellow">Question 3</p>
-        <p style="color:purple; background-color:pink;">Question 4</p>
+        <p style="color:rgb(17, 17, 41); background-color:rgb(170, 208, 208)">What is your name?</p>
+        <p style="color:rgb(21, 53, 53); background-color:rgb(196, 196, 196)">What is your quest?</p>
+        <p style="color:rgb(48, 54, 38); background-color:rgb(217, 217, 147)">What is your favorite color?</p>
+        <p style="color:rgb(29, 16, 29); background-color:rgb(226, 194, 200);">African or European swallow?</p>
     </main>
 
     <footer></footer>
