added borders and centered text

--- a/201/Class1Lab/index.html
+++ b/201/Class1Lab/index.html
@@ -7,6 +7,9 @@
         h1 {
             color: aliceblue;
             background-color: rgb(14, 14, 50);
+            margin: 20px; 
+            text-align: center;
+            border: dashed yellow;
         }
     </style>
     <script src = "class1lab.js"></script>
@@ -17,10 +20,10 @@
     <header></header>
     <main>
         <h1>Class 1 Lab</h1>
-        <p style="color:rgb(17, 17, 41); background-color:rgb(170, 208, 208)">What is your name?</p>
-        <p style="color:rgb(21, 53, 53); background-color:rgb(196, 196, 196)">What is your quest?</p>
-        <p style="color:rgb(48, 54, 38); background-color:rgb(217, 217, 147)">What is your favorite color?</p>
-        <p style="color:rgb(29, 16, 29); background-color:rgb(226, 194, 200);">African or European swallow?</p>
+        <p style="color:rgb(17, 17, 41); background-color:rgb(170, 208, 208); margin: 20px; text-align: center; border: dashed yellow;">What is your name?</p>
+        <p style="color:rgb(21, 53, 53); background-color:rgb(196, 196, 196); margin: 20px; text-align: center; border: dashed yellow;">What is your quest?</p>
+        <p style="color:rgb(48, 54, 38); background-color:rgb(217, 217, 147); margin: 20px; text-align: center; border: dashed yellow;">What is your favorite color?</p>
+        <p style="color:rgb(29, 16, 29); background-color:rgb(226, 194, 200); margin: 20px; text-align: center; border: dashed yellow;">African or European swallow?</p>
     </main>
 
     <footer></footer>
