removed async, added custom message

--- a/201/About Me/index.html
+++ b/201/About Me/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- adding a note here -->
-    <script src="js/code.js" async defer></script>
+    <script src="js/code.js"></script>
     <header>
         <nav>
             <ul>
@@ -29,8 +29,10 @@
     </header>
 
     <main>
-        <h1>Welcome to the home page</h1>
+        <h1>Welcome!</h1>
 
+        <!-- <p>document.write('Hello, ' + userName + '!')</p> -->
+            
         <p>Hello, my name is Emma and welcome to my page. Here you will learn a bit about me.</p>
 
         <h2>Biography</h2>
