adjusted CSS parameters

--- a/201/AboutMe/index.html
+++ b/201/AboutMe/index.html
@@ -45,30 +45,39 @@
 
         <h2>Education</h2>
 
-        <p>In 2013, I graduated from Cornell College in Mount Vernon, Iowa. I majored in Biochemistry and Molecular
-            Biology and graduated with a 3.5 GPA. I remained in band and choir throughout choir, and was involved in a
-            sorority, Beta Psi Eta.</p>
+        <ul>
+            <li>In 2013, I graduated from Cornell College in Mount Vernon, Iowa.</li>
+            <li>I majored in Biochemistry and Molecular
+                Biology and graduated with a 3.5 GPA. </li>
+            <li>I remained in band and choir throughout choir, and was involved in a
+                sorority, Beta Psi Eta.</li>
+        </ul>
 
         <h2>Work Experience</h2>
 
-        <p>After graduating college, I worked for about two years for Roquette America Inc, where my job was performing
-            quality control testing on high fructose corn syrup and dextrose. After that, I was able to get a job with
-            the University of Iowa Pharmaceuticals. In this role, I performed quality control testing as well as other studies
-            on pharmaceutical drug products. Most of these were in various stages of clinical research. I was in this
-            position for eight years before I changed fields to pursure computer science.</p>
-
+        <ul>
+            <li>After graduating college, I worked for about two years for Roquette America Inc, where my job was
+                performing
+                quality control testing on high fructose corn syrup and dextrose. </li>
+            <li>After that, I was able to get a job
+                with
+                the University of Iowa Pharmaceuticals. In this role, I performed quality control testing as well as
+                other studies
+                on pharmaceutical drug products. Most of these were in various stages of clinical research. I was in
+                this
+                position for eight years before I changed fields to pursure computer science.</li>
+        </ul>
         <h2>Goals</h2>
 
         <p>Since pursuing a career change, my new goal is to complete the coding program throuhg DeltaV Code School,
-            then get a job as a developer. At this stage, I don't know what kind of company I would most like to work
-            for. I
-            enjoy creative pursuits such as music and art, but I also have a great deal of experience in the biological
-            and
-            chemical sciences and would be interested in working for a pharmaceutical company.</p>
+            then get a job as a developer. At this stage, I don't know what kind of company I would most like to
+            work for. I enjoy creative pursuits such as music and art, but I also have a great deal of experience in the
+            biological and chemical sciences and would be interested in working for a pharmaceutical company.</p>
 
         <h2>Interests</h2>
 
-        <p>In my free time, I enjoy making digital art, playing the piano, and I am writing a fantasy novel. I have an
+        <p>In my free time, I enjoy making digital art, playing the piano, and I am writing a fantasy novel. I have
+            an
             amazing husband, Drew, as well as two cats and a dog.</p>
 
         <h2>Top Ten Comedy TV Shows</h2>
@@ -85,9 +94,7 @@
             <li> Archer </li>
         </ol>
 
-        <h3>
-            <button onclick="questionOne()">Take the Quiz</button>
-        </h3>
+        <button onclick="questionOne()">Take the Quiz</button>
 
     </main>
 
